===================================
TSDuck Change Log and Release Notes
===================================

Version (next)

- Improved robustness of DVB tuner reception on Windows. Explicitly
  resynchronizes on valid packets when the driver misses data.

- Adjusted output of tslsdvb on Windows to better identify tuner names.

Version 3.2-20170528

- Added option --poll-file to inject plugin.

- Bug fix: In tstables and tables plugin, the option --max-tables was not
  accurate when several small tables (eg. EMM's) were packed in the same
  TS packet. This is fixed.

Version 3.2-20170525

- Added the development environment in the Windows Installer. This is used to
  develop third-party applications using the TSDuck library. On Ubuntu, added
  the tsduck-dev package. On RPM-based distros, the tsduck-devel package
  already existed.

- Added option --no-duplicate to tstables and tables plugin.

- Added TSPLUGINS_PATH environment variable to use tsp and tsgentab plugins
  outside the directory of the TSDuck executables.